# web2md

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config  .prettierignore  .prettierrcignore  ADVANCED-RAG-MCP-COMPLETE.md  ADVANCED-RAG-MCP-PLAN.md  AUTHORS.md  AUTO-PROMPT-IMPLEMENTATION.md  CHANGELOG.md  CODE-GRAPH-MCP-COMPLETE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  GAP-FILL-PLAN.md  GITLAB.md  HARNESS-GAP-ANALYSIS.md  LICENSE  MCP-SERVERS-POST-RESTART.md  MCP-SERVERS-READY.md  MCP-SERVERS-STATUS.md  Makefile  PODMAN.md  README-TRAFFILATURE.md  README.md  STATUS-FINAL.md  WEB2MD-RAG-INTEGRATION.md  behave-docs.md  conftest.py  demo-harness.sh  docker-compose.test.yml  docker-compose.yml  install-local.sh  install.sh  locust-docs.md  locustfile.py  package-lock.json  package.json  (+10 more)
auto_prompt/: EXAMPLES.md  README.md  __init__.py  cli.py  direct_test.py  quick_test.py  test_orchestrator.py  test_simple.py
auto_prompt/core/: __init__.py  classifier.py  generator.py  orchestrator.py  result_aggregator.py  task_decomposer.py  template_engine.py
auto_prompt/templates/: prompts.json
auto_prompt/tests/: test_classifier.py  test_generator.py
auto_prompt/utils/: __init__.py  mcp_client.py  validators.py
https:/: www.google.com
https:/httpbin.org/: html
mcp-servers/.claude/: settings.local.json
mcp-servers/advanced-rag/: README.md  requirements.txt  run.sh  (+2 more)
scripts/: analyze-performance.py  generate-report.py  web2md-enhanced.py
tests/: README.md  behave.ini  pytest.ini  requirements.txt  run-all-tests.sh  run-docker-tests.sh
(+30 files in other folders)
